--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <section class="main">
                   <div id="tab-1">
                     <h2>Contenido 1</h2>
-                    <!-- <form id="form" action="">
+                    <form id="form" action="">
                         <label for="soluto">Soluto</label>
                         <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
                         <label for="solucion">Solucion</label>
                         <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
                         <div class="resMol" id="resp"></div>
                         <input type="button" value="Enviar" onclick="mol(), limpiar2();">
-                    </form> -->
+                    </form>
                   </div>
                   <div id="tab-2">
                     <h2>Contenido 2</h2>
@@ -89,19 +89,19 @@
                   </ul>
             </aside>
           </div>
-<!----------------------- Section 2--------------------------------------------- -->
+
           <div id="tb2">
             <section class="main">
                   <div id="tab-1">
                     <h2>Contenido 1</h2>
-                    <!-- <form id="form" action="">
+                    <form id="form" action="">
                         <label for="soluto">Soluto</label>
                         <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
                         <label for="solucion">Solucion</label>
                         <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
                         <div class="resMol" id="resp"></div>
                         <input type="button" value="Enviar" onclick="mol(), limpiar2();">
-                    </form> -->
+                    </form>
                   </div>
                   <div id="tab-2">
                     <h2>Contenido 2</h2>
@@ -145,9 +145,11 @@
                   </ul>
             </aside>
           </div>
-          <!-- <div id="tb2">
+
+          <div id="tb3">
             <section class="main">
                   <div id="tab-1">
+                    <h2>Contenido 1</h2>
                     <form id="form" action="">
                         <label for="soluto">Soluto</label>
                         <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
@@ -158,34 +160,35 @@
                     </form>
                   </div>
                   <div id="tab-2">
-                    <form id="form" action="">
+                    <h2>Contenido 2</h2>
+                    <!-- <form id="form" action="">
                         <label for="soluto">Soluto</label>
                         <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
                         <label for="solucion">Solucion</label>
                         <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
                         <div class="resMol" id="resp"></div>
                         <input type="button" value="Enviar" onclick="mol(), limpiar2();">
-                    </form>
+                    </form> -->
                   </div>
                   <div id="tab-3">
-                    <form id="form" action="">
+                    <!-- <form id="form" action="">
                         <label for="soluto">Soluto</label>
                         <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
                         <label for="solucion">Solucion</label>
                         <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
                         <div class="resMol" id="resp"></div>
                         <input type="button" value="Enviar" onclick="mol(), limpiar2();">
-                    </form>
+                    </form> -->
                   </div>
                   <div id="tab-4">
-                    <form id="form" action="">
+                    <!-- <form id="form" action="">
                         <label for="soluto">Soluto</label>
                         <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
                         <label for="solucion">Solucion</label>
                         <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
                         <div class="resMol" id="resp"></div>
                         <input type="button" value="Enviar" id="bt-send">
-                    </form>
+                    </form> -->
                   </div>
             </section>
 
@@ -195,127 +198,10 @@
                     <li><a href="#tab-2">(m)</a></li>
                     <li><a href="#tab-3">FM Xa</a></li>
                     <li><a href="#tab-4">% m/m</a></li>
-                    <li><a href="#tab-5">% m/v</a></li>
-                    <li><a href="#tab-6">% v/v</a></li>
-                  </ul>
-            </aside>
-          </div> -->
-
-
-          <!-- <div id="tb3">
-            <section class="main">
-                  <div id="tab-1">
-                    <form id="form" action="">
-                        <label for="soluto">Soluto</label>
-                        <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
-                        <label for="solucion">Solucion</label>
-                        <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
-                        <div class="resMol" id="resp"></div>
-                        <input type="button" value="Enviar" onclick="mol(), limpiar2();">
-                    </form>
-                  </div>
-                  <div id="tab-2">
-                    <form id="form" action="">
-                        <label for="soluto">Soluto</label>
-                        <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
-                        <label for="solucion">Solucion</label>
-                        <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
-                        <div class="resMol" id="resp"></div>
-                        <input type="button" value="Enviar" onclick="mol(), limpiar2();">
-                    </form>
-                  </div>
-                  <div id="tab-3">
-                    <form id="form" action="">
-                        <label for="soluto">Soluto</label>
-                        <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
-                        <label for="solucion">Solucion</label>
-                        <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
-                        <div class="resMol" id="resp"></div>
-                        <input type="button" value="Enviar" onclick="mol(), limpiar2();">
-                    </form>
-                  </div>
-                  <div id="tab-4">
-                    <form id="form" action="">
-                        <label for="soluto">Soluto</label>
-                        <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
-                        <label for="solucion">Solucion</label>
-                        <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
-                        <div class="resMol" id="resp"></div>
-                        <input type="button" value="Enviar" id="bt-send">
-                    </form>
-                  </div>
-            </section>
-
-            <aside class="aside">
-                <ul class="list-btn">
-                    <li><a href="#tab-1"name="Molaridad">(M)</a></li>
-                    <li><a href="#tab-2">(m)</a></li>
-                    <li><a href="#tab-3">FM Xa</a></li>
-                    <li><a href="#tab-4">% m/m</a></li>
-                    <li><a href="#tab-5">% m/v</a></li>
-                    <li><a href="#tab-6">% v/v</a></li>
                   </ul>
             </aside>
           </div>
-        </div> -->
 
-<!-- -------------------------------------------------------------- -->
-
-
-
-        <!-- <section class="main">
-              <div id="tab-1">
-                <form id="form" action="">
-                    <label for="soluto">Soluto</label>
-                    <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
-                    <label for="solucion">Solucion</label>
-                    <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
-                    <div class="resMol" id="resp"></div>
-                    <input type="button" value="Enviar" onclick="mol(), limpiar2();">
-                </form>
-              </div>
-              <div id="tab-2">
-                <form id="form" action="">
-                    <label for="soluto">Soluto</label>
-                    <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
-                    <label for="solucion">Solucion</label>
-                    <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
-                    <div class="resMol" id="resp"></div>
-                    <input type="button" value="Enviar" onclick="mol(), limpiar2();">
-                </form>
-              </div>
-              <div id="tab-3">
-                <form id="form" action="">
-                    <label for="soluto">Soluto</label>
-                    <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
-                    <label for="solucion">Solucion</label>
-                    <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
-                    <div class="resMol" id="resp"></div>
-                    <input type="button" value="Enviar" onclick="mol(), limpiar2();">
-                </form>
-              </div>
-              <div id="tab-4">
-                <form id="form" action="">
-                    <label for="soluto">Soluto</label>
-                    <input type="text" name="" id="soluto" placeholder="Gramos de soluto">
-                    <label for="solucion">Solucion</label>
-                    <input type="text" name="" id="solucion" placeholder="Gramos de solucion">
-                    <div class="resMol" id="resp"></div>
-                    <input type="button" value="Enviar" id="bt-send">
-                </form>
-              </div>
-        </section> -->
-        <!-- Aside para section de botones -->
-        <!-- <aside class="aside">
-            <ul class="list-btn">
-                <li><a href="#tab-1"name="Molaridad">(M)</a></li>
-                <li><a href="#tab-2">(m)</a></li>
-                <li><a href="#tab-3">FM Xa</a></li>
-                <li><a href="#tab-4">% m/m</a></li>
-                <li><a href="#tab-5">% m/v</a></li>
-                <li><a href="#tab-6">% v/v</a></li>
-              </ul>
-        </aside> -->
         <!-- Section del footer -->
         <footer class="footer">
 
